--- a/content/articles/2019-02-02-SimpleLR.md
+++ b/content/articles/2019-02-02-SimpleLR.md
@@ -23,24 +23,24 @@ In this post I will try explaining some of the concepts of Linear Regression usi
 #### Notation:
 The following notations will be used throughout this post, and in cases of minor changes, I shall do well to state an eleborate description as to how and why, otherwise:
 
-$X$   -   training input(Features)
+\(X\)   -   training input(Features)
 
-$y$   -   training output(Target)
+\(y\)  -   training output(Target)
 
-$(X,y)$   -   A sample of Training set
+\((X,y)\)   -   A sample of Training set
   
-$(X^{i}, y^{i})$   -  _ith_ batch of training set
+\((X^{i}, y^{i})\)    -  _ith_ batch of training set
   
-$n$   -   Number of training features $(X)$
+\(n\)   -   Number of training features \((X)\)
   
-$m$   -   Number of training examples
+\(m\)  -   Number of training examples
   
-$\theta_{i}$   -   Parameters of our Hypothesis.
+\(\theta_{i}\)   -   Parameters of our Hypothesis.
 
 
 ## The Concept of Linear Regression.
 
-The construct below shows the underlying concept of a Linear regression; given a set of predictors $X$ and an outcome $y$, we fit a straight line that not only explains the data, but also serves as a predictive model for unseen data.
+The construct below shows the underlying concept of a Linear regression; given a set of predictors \(X\) and an outcome \(y\), we fit a straight line that not only explains the data, but also serves as a predictive model for unseen data.
 
 
 There are quite a number of assumptions to consider when using linear regression to predict outputs. However, we would be discussing the most common ones:
@@ -64,55 +64,55 @@ Put simply,
 
 Before delving into the cost function, let's shine some light on the <code>Hypothesis</code>, a parametric responsibe for getting the best function(i.e, the best line) that explains $X$ and $y$
 
-Hypothesis: $h_{\theta}(x) = \theta_{0} + \theta_{1} X_{1} + \theta_{2} X_{2}+ ... + \theta_{n} X_{n} \label{a}\tag{1}$
+Hypothesis: \(h_{\theta}(x) = \theta_{0} + \theta_{1} X_{1} + \theta_{2} X_{2}+ ... + \theta_{n} X_{n} \label{a}\tag{1}\)
 
 Or, in our case, a SLR: 
-$h_{\theta}(x) = \theta_{0} + \theta_{1} x  + \epsilon\tag{2}$
+\(h_{\theta}(x) = \theta_{0} + \theta_{1} x + \epsilon\tag{2}\)
 
-where $\epsilon = \left\lvert y - h_{\theta}(x) \right\rvert$ 
+where \(\epsilon = \left\lvert y - h_{\theta}(x) \right\rvert\)
 
-$h_{\theta}(x) = \theta_{1} x\tag{3}$
+\(h_{\theta}(x) = \theta_{1} x\tag{3}\)$
 
-Taking $\theta_{0}$ to be 0. That is, our <code>intercept</code> goes through the origin, as seen below.
+Taking \(\theta_{0}\) to be 0. That is, our <code>intercept</code> goes through the origin, as seen below.
 
 
 ![hypothesis.png]({static}/images/hypothesis.png)
 
-We can clearly see (a) is the best fit with $\theta_{1}$ given as 1. Here's how:
+We can clearly see (a) is the best fit with \(\theta_{1}\) given as 1. Here's how:
 
 ##### Calculations:
-Our training features, in vector notation: $X  \epsilon \mathbb{R}^{4 \times 1}$
+Our training features, in vector notation:  \(X \epsilon \mathbb{R}^{4 \times 1}\)
 
-The term $(\frac {1}{2m})$ is added for convenience, so we can calculate our gradient(slope) in a much interpretable fashion.
+The term \((\frac {1}{2m})\) is added for convenience, so we can calculate our gradient(slope) in a much interpretable fashion.
 
-Now, let's manually try getting $\theta_{1}$  that minimizes the cost function.
+Now, let's manually try getting \(\theta_{1}\) that minimizes the cost function.
 
-**(a) Randomly picked, $\theta_{1}$ is 1.**
+**(a) Randomly picked, \(\theta_{1}\) is 1.**
 
-i.  __Cost Function__: $J(\theta_{1}) = (\frac{1}{2m}) \sum_{i=1}^{m}\left\lvert(h(x)^{i} - y^{i})\right\rvert^2$
+i.  __Cost Function__: \(J(\theta_{1}) = (\frac{1}{2m}) \sum_{i=1}^{m}\left\lvert(h(x)^{i} - y^{i})\right\rvert^2\)
    
-ii.  $J(\theta_{1}) = (\frac{1}{2m}) \sum_{i=1}^{m}( (\theta_{i} x^{i} - y^{i}) )^2$
+ii.  \(J(\theta_{1}) = (\frac{1}{2m}) \sum_{i=1}^{m}( (\theta_{i} x^{i} - y^{i}) )^2\)
    
-iii.  $J(\theta_{1}) = (\frac{1}{2 \times 4}) ( 0^2 + 0^2 + 0^2 + 0^2 )$, which gives us *0*.
+iii.  \(J(\theta_{1}) = (\frac{1}{2 \times 4}) ( 0^2 + 0^2 + 0^2 + 0^2 )\), which gives us *0*.
 
 **(b) Randomly picked, $\theta_{1}$ is 0.8.**
 
-   i. $J(\theta_{1}) = (\frac{1}{2 \times 4}) |(0.8 - 1)^2 + (1.5 - 2)^2 + (2.2 - 3)^2 + (2.8 - 4) ^2 |$
+   i.  \(J(\theta_{1}) = (\frac{1}{2 \times 4}) |(0.8 - 1)^2 + (1.5 - 2)^2 + (2.2 - 3)^2 + (2.8 - 4) ^2 |\)
    
-   ii. $J(\theta_{1}) = (\frac{1}{2 \times 4}) (2.37)$
+   ii. \(J(\theta_{1}) = (\frac{1}{2 \times 4}) (2.37)\)
    
-   iii. $J(\theta_{1}) = (\frac{2.37}{8})$, which gives us *0.296*.
+   iii. \(J(\theta_{1}) = (\frac{2.37}{8})\), which gives us *0.296*.
    
    
-Cost Function graph, after trying other arbitary values for $\theta_{1}$:   
+Cost Function graph, after trying other arbitary values for \(\theta_{1}\):   
 ![CF.png]({static}/images/CostFunction.png)
 
-So, what's the value of $\theta_{1}$ that minimizes $J(\theta_{1})$? yeah? ONE! (CF is 0 when $\theta_{1}$ is 1 and 0.296 at a value of 0.8). You can tell just by eyeballing the graph. 
+So, what's the value of \(\theta_{1}\) that minimizes \(J(\theta_{1})\)? yeah? ONE! (CF is 0 when \(\theta_{1}\) is 1 and 0.296 at a value of 0.8). You can tell just by eyeballing the graph.  
 
 
 **IMPORTANT**:
 
-* In actual practice, you'd be dealing with more than one weight and while you can manually compute your weights(parameters, $\theta$) either by brute-forcing or random-guessing, it's never really a good idea to do so as it can be something of a computational nightmare. 
+* In actual practice, you'd be dealing with more than one weight and while you can manually compute your weights(parameters, \(\theta\)) either by brute-forcing or random-guessing, it's never really a good idea to do so as it can be something of a computational nightmare. 
 
 * In general, the cost function is often represented as:
 $$J(\theta) = (\frac{1}{2}) \sum_{i=1}^{m}\left\lvert(h(x)^{i} - y^{i})\right\rvert^2$$
@@ -125,27 +125,27 @@ $$J(\theta) = (\frac{1}{2}) \sum_{i=1}^{m}\left\lvert(h(x)^{i} - y^{i})\right\rv
 
 ![gd1.gif]({static}/images/gradient-descent-400.gif)
 
-Gradient Descent is an optimization algorithm that aids in finding the right parameters($\theta s$) that minimizes the __cost function__. Say we have a cost function, $J(\theta_0,\theta_1) = (\frac{1}{m}) \sum_{i=1}^{m} \left| \left(h(x)_i - y_i \right)^2\right|  \label{e}$ and we need to minimize it, to get the best fit for our training data, Gradient Descent goes through a routine of finding the "right" $\theta s$ to achieve that.
+Gradient Descent is an optimization algorithm that aids in finding the right parameters(\(\theta s\)) that minimizes the __cost function__. Say we have a cost function, \(J(\theta_0,\theta_1) = (\frac{1}{m}) \sum_{i=1}^{m} \left| \left(h(x)_i - y_i \right)^2\right| \label{e}\) and we need to minimize it, to get the best fit for our training data, Gradient Descent goes through a routine of finding the "right" \(\theta s\) to achieve that.
 
-Gradient Descent, in non-zorgon: Mary's lamb is at the bottom of a mountain, the _minimum_. Mary would very much like to get to her helpless lamb from the top. Mary had a plan. And it was a simple plan; go down the mountain at a steady pace($\alpha$, learning rate), but how would a blindfolded Mary tell what way's down? She came up with the idea of feeling her environment(gradient/slope), until she got to her lamb.
+Gradient Descent, in non-zorgon: Mary's lamb is at the bottom of a mountain, the _minimum_. Mary would very much like to get to her helpless lamb from the top. Mary had a plan. And it was a simple plan; go down the mountain at a steady pace(\(\alpha\), learning rate), but how would a blindfolded Mary tell what way's down? She came up with the idea of feeling her environment(gradient/slope), until she got to her lamb.
 
 Mathematically,
 
-repeat until convergence {<br>
- $\theta_{j} := \theta_{j} - \alpha \frac{\partial}{\partial \theta_{j}}J(\theta_{0}, \theta_{1})$    (for j = 0 and j = 1)<br>
- }
+repeat until convergence {
+\(\theta_{j} := \theta_{j} - \alpha \frac{\partial}{\partial \theta_{j}}J(\theta_{0}, \theta_{1})\) (for j = 0 and j = 1)
+}
 
 And the update is done as follow, simultaneously:
 
-temp 0 $:= \theta_{0} - \alpha \frac{\partial}{\partial \theta_{j}}J(\theta_{0}, \theta_{1})$<br>
-temp 1 $:= \theta_{1} - \alpha \frac{\partial}{\partial \theta_{j}}J(\theta_{0}, \theta_{1})$ 
+temp 0 \(:= \theta_{0} - \alpha \frac{\partial}{\partial \theta_{j}}J(\theta_{0}, \theta_{1})\)<br>
+temp 1 \(:= \theta_{1} - \alpha \frac{\partial}{\partial \theta_{j}}J(\theta_{0}, \theta_{1})\)
 
-$\theta_{0} := temp0$<br>
-$\theta_{1} := temp1$
+\(\theta_{0} := temp0\)<br>
+\(\theta_{1} := temp1\)
 
 #### Concept of the Gradient Descent:
-1. Start with some $\theta_{0},\theta_{1}$ (e.g., $\theta_{0} = 0, \theta_{1} = 0$ )
-2. Keep updating $\theta_{0},\theta_{1}$ to reduce the cost function $J(\theta_0, \theta_1)$ until we end up at a minimum.
+1. Start with some \(\theta_{0},\theta_{1}\) (e.g., \(\theta_{0} = 0, \theta_{1} = 0\))
+2. Keep updating \(\theta_{0},\theta_{1}\) to reduce the cost function \(J(\theta_0, \theta_1)\) until we end up at a minimum.
  
 Graphically, 
 
@@ -153,17 +153,17 @@ Graphically,
 source: [hackernoon](https://hackernoon.com/dl03-gradient-descent-719aff91c7d6)
 
 
-Where $b$ and $m$ could be represented as $\theta_{0}$ and $\theta_{1}$ respectively, as in our graph.
+Where \(b\) and \(m\) could be represented as \(\theta_{0}\) and \(\theta_{1}\) respectively, as in our graph.
 
 **IMPORTANT!**:
-Finding the minima(local or global) step-wise isn't completely dependent on $\alpha$ as the gradient(slope) itself plays a major role. The weight(s), from the slope's calculations, goes against the negative gradient and keeps moving until reaching a minima. Also, worthy of note:
+Finding the minima(local or global) step-wise isn't completely dependent on \(\alpha\) as the gradient(slope) itself plays a major role. The weight(s), from the slope's calculations, goes against the negative gradient and keeps moving until reaching a minima. Also, worthy of note:
 
-- If the value of $\alpha$ is too small, gradient descent *can* be slow.
-- If $\alpha$ is too large, gradient descent can overshot the minimum, failing to converge, or even diverge.
+- If the value of \(\alpha\) is too small, gradient descent *can* be slow.
+- If \(\alpha\) is too large, gradient descent can overshot the minimum, failing to converge, or even diverge.
 
 ![GD_towardsDatascience]({static}/images/GD-towardscience.png)
 
-- If you are already at a global minimum, $\theta_{n}$ is unchanged, i.e., $$
+- If you are already at a global minimum, \(\theta_{n}\) is unchanged, i.e., $$
 \begin{array}{c}
 \theta_{n} := \theta_{n} - \alpha \times 0\\
 \theta_{n} := \theta_{n} - 0\\
