--- a/content/articles/2019-02-02-SimpleLR.md
+++ b/content/articles/2019-02-02-SimpleLR.md
@@ -7,7 +7,7 @@ tags: ML, math, regression, scikit-learn
 summary: _I blab about Linear Regression, a bit of calculus here and there, gradient descent and made a few plots._
 
 
-A simple Linear Regression is a statistical approach to modelling the relationship between a scalar response(dependent variable) and a single explanatory variable. It is one of the most basic and studied form of regression analysis and in machine learning, it is one of the fundamental supervised algorithms.
+A Linear Regression is a statistical approach to modelling the relationship between a scalar response(dependent variable) and one or more explanatory variables(independent variables). It is one of the most basic and studied form of regression analysis and in machine learning, it is one of the fundamental supervised algorithms. A simple Linear Regression would be between a dependent variable and an independent variable.
 
 In this post I will try explaining some of the concepts of Linear Regression using examples and having a working model in python.
 
@@ -71,7 +71,7 @@ $h_{\theta}(x) = \theta_{0} + \theta_{1} x + \epsilon\tag{2}$
 
 where $\epsilon = \left\lvert y - h_{\theta}(x) \right\rvert$
 
-$h_{\theta}(x) = \theta_{1} x\tag{3}$$
+$h_{\theta}(x) = \theta_{1} x\tag{3}$
 
 Taking $\theta_{0}$ to be 0. That is, our <code>intercept</code> goes through the origin, as seen below.
 
@@ -83,7 +83,8 @@ We can clearly see (a) is the best fit with $\theta_{1}$ given as 1. Here's how:
 ##### Calculations:
 Our training features, in vector notation:  $X \epsilon \mathbb{R}^{4 \times 1}$
 
-The term $(\frac {1}{2m})$ is added for convenience, so we can calculate our gradient(slope) in a much interpretable fashion.
+The term $(\frac {1}{2m})$ below is added for convenience, so we can calculate our gradient(slope) in a much interpretable fashion. $m$ being the size of our data,
+and in this case, 4.
 
 Now, let's manually try getting $\theta_{1}$ that minimizes the cost function.
 
@@ -127,7 +128,7 @@ $$J(\theta) = (\frac{1}{2}) \sum_{i=1}^{m}\left\lvert(h(x)^{i} - y^{i})\right\rv
 
 Gradient Descent is an optimization algorithm that aids in finding the right parameters($\theta s$) that minimizes the __cost function__. Say we have a cost function, $J(\theta_0,\theta_1) = (\frac{1}{m}) \sum_{i=1}^{m} \left| \left(h(x)_i - y_i \right)^2\right| \label{e}$ and we need to minimize it, to get the best fit for our training data, Gradient Descent goes through a routine of finding the "right" $\theta s$ to achieve that.
 
-Gradient Descent, in non-zorgon: Mary's lamb is at the bottom of a mountain, the _minimum_. Mary would very much like to get to her helpless lamb from the top. Mary had a plan. And it was a simple plan; go down the mountain at a steady pace($\alpha$, learning rate), but how would a blindfolded Mary tell what way's down? She came up with the idea of feeling her environment(gradient/slope), until she got to her lamb.
+Gradient Descent, in non-zorgon: Mary's lamb is at the bottom of a mountain, the _minimum_. Mary would very much like to get to her helpless lamb from the top. Mary has a plan. And it is a simple plan; go down the mountain at a steady pace($\alpha$, learning rate), but how would a blindfolded Mary tell what way's down? She came up with the idea of feeling her environment(gradient/slope), until she gets to her lamb at the bottom.
 
 Mathematically,
 
