updated OOP article tags

--- a/content/articles/2021-02-03-oops.md
+++ b/content/articles/2021-02-03-oops.md
@@ -3,7 +3,7 @@ slug: oop-concise-version
 date: 2021-02-03 10:15
 author: Emmanuel Okwudike
 category: Machine Learning
-tags: ML, math, regression, scikit-learn
+tags: OOP, math, python, class, object
 summary: _Glimpse of Object Oriented Programming_
 
 
