--- a/content/articles/2019-02-02-SimpleLR.md
+++ b/content/articles/2019-02-02-SimpleLR.md
@@ -7,9 +7,10 @@ tags: ML, math, regression, scikit-learn
 summary: _I blab about Linear Regression, a bit of calculus here and there, gradient descent and made a few plots._
 
 
-A Linear Regression is a statistical approach to modelling the relationship between a scalar response(dependent variable) and one or more explanatory variables(independent variables). It is one of the most basic and studied form of regression analysis and in machine learning, it is one of the fundamental supervised algorithms. A simple Linear Regression would be between a dependent variable and an independent variable.
+Linear Regression is a statistical approach to modeling the relationship between a scalar response(dependent variable) and one or more explanatory variables(independent variables). It is one of the most basic and studied forms of regression analysis and in machine learning, it is one of the fundamental supervised algorithms. A simple Linear Regression would be between a dependent variable and an independent variable.
 
-In this post I will try explaining some of the concepts of Linear Regression using examples and having a working model in python.
+
+In this post, I will try to explain some of the concepts of Linear Regression using examples and having a working model in Python.
 
 
 #### Contents:
@@ -40,17 +41,16 @@ $\theta_{i}$   -   Parameters of our Hypothesis.
 
 ## The Concept of Linear Regression.
 
-The construct below shows the underlying concept of a Linear regression; given a set of predictors $X$ and an outcome $y$, we fit a straight line that not only explains the data, but also serves as a predictive model for unseen data.
-
+The construct below shows the underlying concept of Linear regression; given a set of predictors $X$ and an outcome $y$, we fit a straight line that not only explains the data but also serves as a predictive model for unseen data.
 
 There are quite a number of assumptions to consider when using linear regression to predict outputs. However, we would be discussing the most common ones:
 
 
 - __Separability/additivity__:
-It's a very big assumption that plays on the effects of things in isolation adds up when they happen together. In layman's terms, If there exist multiple pieces of information that would affect the outcome of the prediction, each of the available information could be summed up as if they were being used in isolation. 
+It's a very big assumption that plays on the effects of things in isolation add up when they happen together. In layman's terms, If there exist multiple pieces of information that would affect the outcome of the prediction, each of the available information could be summed up as if they were being used in isolation.
 
 - __Monotonicity/linearity__:
-A monotonic model is one where changing one of the inputs have a corresponding change(up or down) in the response variable. It assumes as the explanatory variables increase so should the outcome, which isn't always true. Thus, monotonicity holds less compared to the linearity of a model, which is merely a restriction on the parameters(regression coefficients), and speaks loudly of the linear relationship between the mean of the response variable and the explanatory variables.
+A monotonic model is one where changing one of the inputs has a corresponding change(up or down) in the response variable. It assumes as the explanatory variables increase so should the outcome, which isn't always true. Thus, monotonicity holds less compared to the linearity of a model, which is merely a restriction on the parameters(regression coefficients), and speaks loudly of the linear relationship between the mean of the response variable and the explanatory variables.
 
 
 - __Lack of perfect multicollinearity in the predictors.__
@@ -83,7 +83,7 @@ We can clearly see (a) is the best fit with $\theta_{1}$ given as 1. Here's how:
 ##### Calculations:
 Our training features, in vector notation:  $X \epsilon \mathbb{R}^{4 \times 1}$
 
-The term $(\frac {1}{2m})$ below is added for convenience, so we can calculate our gradient(slope) in a much interpretable fashion. $m$ being the size of our data,
+The term $(\frac {1}{2m})$ below is added for convenience, so we can calculate our gradient(slope) in a much more interpretable fashion. $m$ is the size of our data,
 and in this case, 4.
 
 Now, let's manually try getting $\theta_{1}$ that minimizes the cost function.
@@ -108,7 +108,7 @@ iii.  $J(\theta_{1}) = (\frac{1}{2 \times 4}) ( 0^2 + 0^2 + 0^2 + 0^2 )$, which 
 Cost Function graph, after trying other arbitary values for $\theta_{1}$:   
 ![CF.png](/images/CostFunction.png)
 
-So, what's the value of $\theta_{1}$ that minimizes $J(\theta_{1})$? yeah? ONE! (CF is 0 when $\theta_{1}$ is 1 and 0.296 at a value of 0.8). You can tell just by eyeballing the graph.  
+So, what's the value of $\theta_{1}$ that minimizes $J(\theta_{1})$? Yeah? ONE! (CF is 0 when $\theta_{1}$ is 1 and 0.296 at a value of 0.8). You can tell just by eyeballing the graph.  
 
 
 **IMPORTANT**:
@@ -126,9 +126,9 @@ $$J(\theta) = (\frac{1}{2}) \sum_{i=1}^{m}\left\lvert(h(x)^{i} - y^{i})\right\rv
 
 ![gd1.gif](/images/gradient-descent-400.gif)
 
-Gradient Descent is an optimization algorithm that aids in finding the right parameters($\theta s$) that minimizes the __cost function__. Say we have a cost function, $J(\theta_0,\theta_1) = (\frac{1}{m}) \sum_{i=1}^{m} \left| \left(h(x)_i - y_i \right)^2\right| \label{e}$ and we need to minimize it, to get the best fit for our training data, Gradient Descent goes through a routine of finding the "right" $\theta s$ to achieve that.
+Gradient Descent is an optimization algorithm that aids in finding the right parameters($\theta s$) that minimize the __cost function__. Say we have a cost function, $J(\theta_0,\theta_1) = (\frac{1}{m}) \sum_{i=1}^{m} \left| \left(h(x)_i - y_i \right)^2\right| \label{e}$ and we need to minimize it, to get the best fit for our training data, Gradient Descent goes through a routine of finding the "right" $\theta s$ to achieve that.
 
-Gradient Descent, in non-zorgon: Mary's lamb is at the bottom of a mountain, the _minimum_. Mary would very much like to get to her helpless lamb from the top. Mary has a plan. And it is a simple plan; go down the mountain at a steady pace($\alpha$, learning rate), but how would a blindfolded Mary tell what way's down? She came up with the idea of feeling her environment(gradient/slope), until she gets to her lamb at the bottom.
+Gradient Descent, in non-zorgon: Mary's lamb is at the bottom of a mountain, the _minimum_. Mary would very much like to get to her helpless lamb from the mountain top. Mary has a plan. And it is a simple plan; go down the mountain at a steady pace($\alpha$, learning rate), but how would a blindfolded Mary tell what way's down? She came up with the idea of feeling her environment(gradient/slope) until she gets to her lamb at the bottom.
 
 Mathematically,
 
@@ -157,7 +157,7 @@ source: [hackernoon](https://hackernoon.com/dl03-gradient-descent-719aff91c7d6)
 Where $b$ and $m$ could be represented as $\theta_{0}$ and $\theta_{1}$ respectively, as in our graph.
 
 **IMPORTANT!**:
-Finding the minima(local or global) step-wise isn't completely dependent on $\alpha$ as the gradient(slope) itself plays a major role. The weight(s), from the slope's calculations, goes against the negative gradient and keeps moving until reaching a minima. Also, worthy of note:
+Finding the minima(local or global) step-wise isn't completely dependent on $\alpha$ as the gradient(slope) itself plays a major role. The weight(s), from the slope's calculations, goes against the negative gradient and keeps moving until reaching minima. Also, worthy of note:
 
 - If the value of $\alpha$ is too small, gradient descent *can* be slow.
 - If $\alpha$ is too large, gradient descent can overshot the minimum, failing to converge, or even diverge.
@@ -186,7 +186,7 @@ $$
 
 Linear regression models are a good starting point for regression tasks and while this is an overview of a Simple Linear Regression, do take note that implementations of the regression technique are beyond the scope of what you've seen to this point.
 
-I had hoped this would contain as much math as I would like but I'm quite ok with the content. In practice it requires a lot of math to **really** understand the fundamentals.
+I had hoped this would contain as much math as I would like but I'm quite ok with the content. In practice, it requires a lot of math to **really** understand the fundamentals.
 
 
 #### Resources
