--- a/content/articles/2023-07-18-.md
+++ b/content/articles/2023-07-18-.md
@@ -7,7 +7,7 @@ tags: ml, hackathon, competition, research
 summary: _Hackathon to hack..._
 
 
-[Machine Learning Hackathons](https://corporate.hackathon.com/articles/machine-learning-hackathon-guide-everything-you-need-to-know) serve as a recreational activity, for me. And until last night, my last indulgence — sometime around 2021;  pre-COVID-19 era, on the Zindi Platform. I've recently taken up [DSN and Microsoft Skills for Job](https://zindi.africa/competitions/free-ai-classes-in-every-city-hackathon-2023) as a pastime with an underlying research angle, and so far I've come to enjoy the entire process all over again. It's thrilling to see how minor adjustments can move one up the leaderboard. Self-gratification and then, possibly, the inevitable shakedown as other similarly skilled data scientists improve on their model.
+[Machine Learning Hackathons](https://corporate.hackathon.com/articles/machine-learning-hackathon-guide-everything-you-need-to-know) serve as a recreational activity, for me. And until last night, my last indulgence — sometime around 2021;  pre-COVID-19 era, on the Zindi Platform. Half the intent is to acknowledge that I've recently taken up [DSN and Microsoft Skills for Job](https://zindi.africa/competitions/free-ai-classes-in-every-city-hackathon-2023) as a pastime with an underlying research angle, and so far I've come to enjoy the entire process all over again. It's thrilling to see how minor adjustments can move one up the leaderboard. Self-gratification and then, possibly, the inevitable shakedown as other similarly skilled data scientists improve on their model.
 
 Basically, one's position on the leaderboard reflects only on some subset of the whole dataset provided by the organizers until end of the competition. Hence, _shakedown_. There are other technicalities (for instance, "overfitting to the holdout") to it but that would be a bore. [Read this paper](https://arxiv.org/abs/1502.04585) if you have an interest in the shenanigan that can be the leaderboard.
 
